re PR c++/31038 (ICE with C99 style compound literal vs templates vs instantiation)

PR c++/31038
	* parser.c (cp_parser_postfix_expression): Disallow compound
	literals in constant expressions.

	PR c++/30328
	* semantics.c (finish_typeof): Use unlowered_expr_type.

	PR c++/31038
	* g++.dg/template/complit2.C: New test.

	PR c++/30328
	* g++.dg/ext/bitfield1.C: New test.

From-SVN: r122830